# pixeltable-takeout-ingestor

./: .env.example  .gitignore  README.md  pyproject.toml  test_basic.py  test_claude_ingestion.py  test_mcp.py  test_parsing.py  test_real_claude_ingestion.py
mcp_servers_original/: README.md
takeout_ingestor/: __init__.py  cli.py
takeout_ingestor/ingestors/: __init__.py  base.py  claude_conversations.py
takeout_ingestor/mcp_servers/: __init__.py  audio.py  common.py  document_server.py  documents.py  images.py  video.py
